--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,118 +1,41 @@
-name: RDP4-247
+name: V18.3 Phoenix Relay
 
 on:
   workflow_dispatch:
-    inputs:
-      session_count:
-        default: '1'
   schedule:
-    - cron: '0 */6 * * *'
+    # Runs at minute 55 of hours 5, 11, 17, 23 (The 24/7 Relay)
+    - cron: '55 5,11,17,23 * * *'
 
 jobs:
-  # --- ALPHA MACHINE ---
-  Alpha_Node:
-    runs-on: windows-latest
-    timeout-minutes: 350
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Tailscale
-        shell: powershell
-        env:
-          TS_AUTHKEY: ${{ secrets.TS_AUTHKEY }}
-        run: |
-          Invoke-WebRequest -Uri https://pkgs.tailscale.com/stable/tailscale-setup-latest.exe -OutFile ts.exe
-          Start-Process -FilePath .\ts.exe -ArgumentList "/quiet", "/norestart" -Wait
-          & "C:\Program Files\Tailscale\tailscale.exe" up --authkey "$env:TS_AUTHKEY" --hostname "RDP4-Alpha-${{ github.event.inputs.session_count }}" --force-reauth
-
-      - name: Configure RDP
-        shell: powershell
-        run: |
-          $Password = ConvertTo-SecureString "GithubRDP123!" -AsPlainText -Force
-          Set-LocalUser -Name "runneradmin" -Password $Password
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
-          Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-          for ($i=1; $i -le 10; $i++) {
-              $ip = (& "C:\Program Files\Tailscale\tailscale.exe" ip -4)
-              if ($ip) { echo "FINAL_IP=$ip" >> $env:GITHUB_ENV; break }
-              Start-Sleep -Seconds 5
-          }
-
-      - name: Notify & Keep-Alive (Alpha)
-        shell: bash
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
-          COUNT: ${{ github.event.inputs.session_count }}
-        run: |
-          IP="${{ env.FINAL_IP }}"
-          MSG="RDP ONLINE | REPO: RDP4 | JOB: ALPHA | S#: $COUNT | IP: $IP"
-          curl -s -X POST "https://api.telegram.org/bot$TELEGRAM_TOKEN/sendMessage" -d "chat_id=$TELEGRAM_TO" -d "text=$MSG"
-          powershell.exe "Start-Sleep -Seconds 20000"
-
-  # --- BRAVO MACHINE ---
-  Bravo_Node:
-    runs-on: windows-latest
-    timeout-minutes: 350
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Tailscale
-        shell: powershell
-        env:
-          TS_AUTHKEY: ${{ secrets.TS_AUTHKEY }}
-        run: |
-          Invoke-WebRequest -Uri https://pkgs.tailscale.com/stable/tailscale-setup-latest.exe -OutFile ts.exe
-          Start-Process -FilePath .\ts.exe -ArgumentList "/quiet", "/norestart" -Wait
-          & "C:\Program Files\Tailscale\tailscale.exe" up --authkey "$env:TS_AUTHKEY" --hostname "RDP4-Bravo-${{ github.event.inputs.session_count }}" --force-reauth
-
-      - name: Configure RDP
-        shell: powershell
-        run: |
-          $Password = ConvertTo-SecureString "GithubRDP123!" -AsPlainText -Force
-          Set-LocalUser -Name "runneradmin" -Password $Password
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
-          Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-          for ($i=1; $i -le 10; $i++) {
-              $ip = (& "C:\Program Files\Tailscale\tailscale.exe" ip -4)
-              if ($ip) { echo "FINAL_IP=$ip" >> $env:GITHUB_ENV; break }
-              Start-Sleep -Seconds 5
-          }
-
-      - name: Notify & Keep-Alive (Bravo)
-        shell: bash
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
-          COUNT: ${{ github.event.inputs.session_count }}
-        run: |
-          IP="${{ env.FINAL_IP }}"
-          MSG="RDP ONLINE | REPO: RDP4 | JOB: BRAVO | S#: $COUNT | IP: $IP"
-          curl -s -X POST "https://api.telegram.org/bot$TELEGRAM_TOKEN/sendMessage" -d "chat_id=$TELEGRAM_TO" -d "text=$MSG"
-          powershell.exe "Start-Sleep -Seconds 20000"
-
-  # --- LOOP TRIGGER & DELAYED CLEANUP ---
-  Trigger:
-    needs: [Alpha_Node, Bravo_Node]
+  launch-phoenix:
     runs-on: ubuntu-latest
-    if: always()
+    timeout-minutes: 360
+
     steps:
-      - name: Checkout Repository
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Cleanup & Loop
-        shell: bash
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install Dependencies
         run: |
-          git config --global --add safe.directory /github/workspace
-          echo "Waiting for API Sync..."
-          sleep 45
-          gh run list --workflow RDP4-247 --limit 100 --status completed --json databaseId -q '.[].databaseId' | xargs -I{} gh run delete {} || true
-          
-          NEXT=$(( ${{ github.event.inputs.session_count }} + 1 ))
-          if [ ! -f "STOP" ]; then
-            gh workflow run RDP4-247 -f session_count=$NEXT
-          fi
+          python -m pip install --upgrade pip
+          pip install selenium webdriver-manager
+
+      - name: Run V18.3 Phoenix
+        env:
+          PYTHONUNBUFFERED: 1  # ⚡ Forces Real-Time Logs
+          INSTA_SESSION: ${{ secrets.INSTA_SESSION }}
+          TARGET_THREAD_ID: ${{ secrets.TARGET_THREAD_ID }}
+          MESSAGES: ${{ secrets.MESSAGES }}
+        run: python main.py
+
+      - name: Upload Logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: phoenix-logs
+          path: message_log.txt
