--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,12 @@
-name: V18.3 Phoenix Relay
+name: V17.6 Real-Time Turbo
 
 on:
   workflow_dispatch:
   schedule:
-    # Runs at minute 55 of hours 5, 11, 17, 23 (The 24/7 Relay)
     - cron: '55 5,11,17,23 * * *'
 
 jobs:
-  launch-phoenix:
+  launch-realtime:
     runs-on: ubuntu-latest
     timeout-minutes: 360
 
@@ -25,9 +24,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install selenium webdriver-manager
 
-      - name: Run V18.3 Phoenix
+      - name: Run V17.6 Real-Time
         env:
-          PYTHONUNBUFFERED: 1  # ⚡ Forces Real-Time Logs
+          # ⚡ THIS IS THE KEY TO REAL-TIME LOGS
+          PYTHONUNBUFFERED: 1 
           INSTA_SESSION: ${{ secrets.INSTA_SESSION }}
           TARGET_THREAD_ID: ${{ secrets.TARGET_THREAD_ID }}
           MESSAGES: ${{ secrets.MESSAGES }}
@@ -37,5 +37,5 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: phoenix-logs
+          name: realtime-logs
           path: message_log.txt
