--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
-name: Phoenix V65 Long Haul
+name: Phoenix V64 Loop
 
 on:
   workflow_dispatch:      # Manual trigger
-  repository_dispatch:    # Restart trigger
+  repository_dispatch:    # Loop trigger
     types: [restart_bot]
   schedule:
-    - cron: '0 */6 * * *' # Backup trigger every 6 hours
+    - cron: '0 */6 * * *' # Backup triggers every 6 hours
 
 permissions:
   actions: write
@@ -14,9 +14,7 @@ permissions:
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-    # ⚠️ CRITICAL: Set to 355 mins. 
-    # If this is too low, GitHub kills the bot before it can restart itself.
-    timeout-minutes: 355  
+    timeout-minutes: 350  # Max run time (6 hours)
 
     steps:
     - name: Checkout Code
@@ -38,9 +36,9 @@ jobs:
       run: |
         pip install selenium
 
-    - name: 🔥 Run Phoenix V65 Engine
+    - name: 🔥 Run V64 Protocol
       id: bot_process
-      continue-on-error: true  # Ensures restart runs even if Python crashes
+      continue-on-error: true  # CRITICAL: Ensures restart happens even if script errors
       env:
         INSTA_COOKIE: ${{ secrets.INSTA_COOKIE }}
         TARGET_THREAD_ID: ${{ secrets.TARGET_THREAD_ID }}
@@ -48,18 +46,20 @@ jobs:
       run: python main.py
 
     - name: 🔄 The Lazarus Protocol (Auto-Restart)
-      if: always()  # Runs even if the bot crashes or times out
+      if: always()  # Runs no matter what
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        echo "⚠️ 6-Hour Shift Finished. Preparing next run..."
+        echo "⚠️ Bot finished (20 mins elapsed). Calculating restart..."
         
-        # 🛡️ COOL DOWN: Wait 2 minutes to let sessions clear
-        echo "💤 Cooling down for 120 seconds..."
-        sleep 120
+        # 🛡️ SAFETY DELAY: 2 to 5 minutes
+        # Short enough to keep spamming, long enough to reset the connection
+        DELAY=$(( ( RANDOM % 180 ) + 120 ))
+        echo "💤 Sleeping for $DELAY seconds..."
+        sleep $DELAY
         
         # 🔄 DYNAMIC RESTART
-        # Gets the ID of THIS workflow file and triggers it again
+        # This gets the internal ID of the workflow running RIGHT NOW
         echo "🔄 Fetching current workflow ID..."
         WORKFLOW_ID=$(gh run view ${{ github.run_id }} --json workflowDatabaseId --jq '.workflowDatabaseId')
         
