--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,20 @@
-name: Phoenix V78 Infinite
+name: Phoenix V64 Loop
 
 on:
-  workflow_dispatch:      # Manual Start Button
-  repository_dispatch:    # Auto-Restart Trigger
+  workflow_dispatch:      # Manual trigger
+  repository_dispatch:    # Loop trigger
     types: [restart_bot]
   schedule:
-    - cron: '0 */6 * * *' # Backup Trigger (Every 6 hours)
-
-# 🛡️ SAFETY LOCK: Prevents multiple bots from running at once
-# If a new run starts, it KILLS the old one immediately.
-concurrency:
-  group: ${{ github.workflow }}
-  cancel-in-progress: true
+    - cron: '0 */6 * * *' # Backup triggers every 6 hours
 
 permissions:
   actions: write
   contents: read
 
 jobs:
-  run-marathon:
+  run-bot:
     runs-on: ubuntu-latest
-    # ⚠️ 6 Hours (360 mins). Matches the Python script limit.
-    timeout-minutes: 360  
+    timeout-minutes: 350  # Max run time (6 hours)
 
     steps:
     - name: Checkout Code
@@ -43,9 +36,9 @@ jobs:
       run: |
         pip install selenium
 
-    - name: 🔥 Run Phoenix Engine
+    - name: 🔥 Run V64 Protocol
       id: bot_process
-      continue-on-error: true  # Ensures the restart happens even if Python exits early
+      continue-on-error: true  # CRITICAL: Ensures restart happens even if script errors
       env:
         INSTA_COOKIE: ${{ secrets.INSTA_COOKIE }}
         TARGET_THREAD_ID: ${{ secrets.TARGET_THREAD_ID }}
@@ -53,20 +46,22 @@ jobs:
       run: python main.py
 
     - name: 🔄 The Lazarus Protocol (Auto-Restart)
-      if: always()  # Runs no matter what happens above
+      if: always()  # Runs no matter what
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        echo "⚠️ 6-Hour Shift Finished. Handing over to next agent..."
+        echo "⚠️ Bot finished (20 mins elapsed). Calculating restart..."
         
-        # 🛡️ SAFETY BUFFER: Wait 2 minutes (120s) before starting next shift
-        # This prevents GitHub from flagging "Rapid Fire" workflows.
-        echo "💤 Cooling down for 120 seconds..."
-        sleep 120
+        # 🛡️ SAFETY DELAY: 2 to 5 minutes
+        # Short enough to keep spamming, long enough to reset the connection
+        DELAY=$(( ( RANDOM % 180 ) + 120 ))
+        echo "💤 Sleeping for $DELAY seconds..."
+        sleep $DELAY
         
         # 🔄 DYNAMIC RESTART
+        # This gets the internal ID of the workflow running RIGHT NOW
         echo "🔄 Fetching current workflow ID..."
         WORKFLOW_ID=$(gh run view ${{ github.run_id }} --json workflowDatabaseId --jq '.workflowDatabaseId')
         
-        echo "🚀 Starting Next 6-Hour Shift (ID: $WORKFLOW_ID)..."
+        echo "🚀 Restarting Workflow ID: $WORKFLOW_ID"
         gh workflow run $WORKFLOW_ID
