--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Phoenix V79 Loop
+name: Phoenix V81 Loop
 
 on:
   workflow_dispatch:      # Manual Start
@@ -56,7 +56,8 @@ jobs:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         echo "⚠️ 6-Hour Shift Finished. Preparing next cycle..."
-        sleep 30
+        # 2 Minute Safety Cool-down
+        sleep 120
         
         echo "🔄 Restarting Workflow..."
         WORKFLOW_ID=$(gh run view ${{ github.run_id }} --json workflowDatabaseId --jq '.workflowDatabaseId')
