--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,20 @@
-name: Phoenix V81 Loop
+name: Phoenix V64 Loop
 
 on:
-  workflow_dispatch:      # Manual Start
-  repository_dispatch:    # Auto-Restart
+  workflow_dispatch:      # Manual trigger
+  repository_dispatch:    # Loop trigger
     types: [restart_bot]
   schedule:
-    - cron: '0 */6 * * *' # Backup every 6 hours
-
-# 🛡️ SAFETY LOCK: Single instance only
-concurrency:
-  group: ${{ github.workflow }}
-  cancel-in-progress: true
+    - cron: '0 */6 * * *' # Backup triggers every 6 hours
 
 permissions:
   actions: write
   contents: read
 
 jobs:
-  run-loop:
+  run-bot:
     runs-on: ubuntu-latest
-    timeout-minutes: 360  # 6 Hours
+    timeout-minutes: 350  # Max run time (6 hours)
 
     steps:
     - name: Checkout Code
@@ -41,24 +36,32 @@ jobs:
       run: |
         pip install selenium
 
-    - name: 🔥 Run Phoenix Engine
+    - name: 🔥 Run V64 Protocol
       id: bot_process
-      continue-on-error: true
+      continue-on-error: true  # CRITICAL: Ensures restart happens even if script errors
       env:
         INSTA_COOKIE: ${{ secrets.INSTA_COOKIE }}
         TARGET_THREAD_ID: ${{ secrets.TARGET_THREAD_ID }}
         MESSAGES: ${{ secrets.MESSAGES }}
       run: python main.py
 
-    - name: 🔄 Auto-Restart Logic
-      if: always()
+    - name: 🔄 The Lazarus Protocol (Auto-Restart)
+      if: always()  # Runs no matter what
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        echo "⚠️ 6-Hour Shift Finished. Preparing next cycle..."
-        # 2 Minute Safety Cool-down
-        sleep 120
+        echo "⚠️ Bot finished (20 mins elapsed). Calculating restart..."
         
-        echo "🔄 Restarting Workflow..."
+        # 🛡️ SAFETY DELAY: 2 to 5 minutes
+        # Short enough to keep spamming, long enough to reset the connection
+        DELAY=$(( ( RANDOM % 180 ) + 120 ))
+        echo "💤 Sleeping for $DELAY seconds..."
+        sleep $DELAY
+        
+        # 🔄 DYNAMIC RESTART
+        # This gets the internal ID of the workflow running RIGHT NOW
+        echo "🔄 Fetching current workflow ID..."
         WORKFLOW_ID=$(gh run view ${{ github.run_id }} --json workflowDatabaseId --jq '.workflowDatabaseId')
+        
+        echo "🚀 Restarting Workflow ID: $WORKFLOW_ID"
         gh workflow run $WORKFLOW_ID
