--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,25 @@
-name: Phoenix V64 Loop
+name: Phoenix V89 Loop
 
 on:
-  workflow_dispatch:      # Manual trigger
-  repository_dispatch:    # Loop trigger
+  workflow_dispatch:      # Manual Start
+  repository_dispatch:    # Auto-Restart
     types: [restart_bot]
   schedule:
-    - cron: '0 */6 * * *' # Backup triggers every 6 hours
+    - cron: '0 */6 * * *' # Backup every 6 hours
+
+# 🛡️ SAFETY LOCK: Single instance only
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
 
 permissions:
   actions: write
   contents: read
 
 jobs:
-  run-bot:
+  run-loop:
     runs-on: ubuntu-latest
-    timeout-minutes: 350  # Max run time (6 hours)
+    timeout-minutes: 360  # 6 Hours
 
     steps:
     - name: Checkout Code
@@ -36,32 +41,24 @@ jobs:
       run: |
         pip install selenium
 
-    - name: 🔥 Run V64 Protocol
+    - name: 🔥 Run Phoenix Engine
       id: bot_process
-      continue-on-error: true  # CRITICAL: Ensures restart happens even if script errors
+      continue-on-error: true
       env:
         INSTA_COOKIE: ${{ secrets.INSTA_COOKIE }}
         TARGET_THREAD_ID: ${{ secrets.TARGET_THREAD_ID }}
         MESSAGES: ${{ secrets.MESSAGES }}
       run: python main.py
 
-    - name: 🔄 The Lazarus Protocol (Auto-Restart)
-      if: always()  # Runs no matter what
+    - name: 🔄 Auto-Restart Logic
+      if: always()
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        echo "⚠️ Bot finished (20 mins elapsed). Calculating restart..."
+        echo "⚠️ 6-Hour Shift Finished. Preparing next cycle..."
+        # 2 Minute Safety Cool-down
+        sleep 120
         
-        # 🛡️ SAFETY DELAY: 2 to 5 minutes
-        # Short enough to keep spamming, long enough to reset the connection
-        DELAY=$(( ( RANDOM % 180 ) + 120 ))
-        echo "💤 Sleeping for $DELAY seconds..."
-        sleep $DELAY
-        
-        # 🔄 DYNAMIC RESTART
-        # This gets the internal ID of the workflow running RIGHT NOW
-        echo "🔄 Fetching current workflow ID..."
+        echo "🔄 Restarting Workflow..."
         WORKFLOW_ID=$(gh run view ${{ github.run_id }} --json workflowDatabaseId --jq '.workflowDatabaseId')
-        
-        echo "🚀 Restarting Workflow ID: $WORKFLOW_ID"
         gh workflow run $WORKFLOW_ID
