--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,9 @@
-name: Phoenix V95 Stable Stealth
+name: Phoenix V100 (Linux Turbo)
 
 on:
   workflow_dispatch:
-  repository_dispatch:
-    types: [restart_bot]
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 */4 * * *' # ⚠️ Starts every 4 hours
 
 concurrency:
   group: ${{ github.workflow }}
@@ -13,8 +11,8 @@ concurrency:
 
 jobs:
   run-loop:
-    runs-on: windows-latest
-    timeout-minutes: 360
+    runs-on: ubuntu-latest # 🐧 SWITCHED TO LINUX
+    timeout-minutes: 350 
 
     steps:
     - name: Checkout Code
@@ -27,27 +25,28 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        # 👇 SWITCHED TO SELENIUM-STEALTH (STABLE)
         pip install selenium selenium-stealth
+        # Chrome is pre-installed on Ubuntu runners, no extra setup needed.
 
-    - name: 🔥 Run Phoenix Engine (V95)
-      id: bot_process
-      continue-on-error: false
+    - name: 🔥 Run Phoenix Engine (Linux Loop)
       env:
         PYTHONIOENCODING: utf-8
         INSTA_COOKIE: ${{ secrets.INSTA_COOKIE }}
         TARGET_THREAD_ID: ${{ secrets.TARGET_THREAD_ID }}
         MESSAGES: ${{ secrets.MESSAGES }}
-      run: python main.py
-
-    - name: 🔄 Auto-Restart Logic
-      if: always()
-      env:
-        GH_TOKEN: ${{ secrets.PERSONAL_TOKEN }} 
       run: |
-        echo "⚠️ Shift Finished. Preparing next cycle..."
-        start-sleep -s 120 
-        
-        echo "🔄 Restarting Workflow..."
-        $WORKFLOW_ID = gh run view ${{ github.run_id }} --json workflowDatabaseId --jq '.workflowDatabaseId'
-        gh workflow run $WORKFLOW_ID
+        # 🐧 BASH INFINITE LOOP
+        # This replaces the Windows PowerShell loop
+        while true; do
+          echo "🚀 Starting Linux Turbo Engine..."
+          
+          # Run Python and catch exit codes
+          if python main.py; then
+            echo "✅ Script finished naturally."
+          else
+            echo "❌ Script crashed internally."
+          fi
+          
+          echo "⚠️ Crash/Exit Detected. Respawning in 10 seconds..."
+          sleep 10
+        done
